# HumanValues

./: .gitignore  README.md  analyse_subreddit.ipynb  collect_reddit_data_to_label.py  environment.yml  label_subreddits.py  pyproject.toml
outputs/: highest_values.tex  subreddits.txt  subreddits_metadata.csv  subs_with_smallest_signal.csv  subs_with_strongest_signal.csv
scripts/: synthetic_eval.py
scripts/training_moral_values/: CReddit.code-workspace  all_train.sh  train_paper.py
value_disagreement/: utils.py
value_disagreement/datasets/: __init__.py  debagreement.py  mftc.py  reddit.py  utils.py  value_dataset.py  valueeval.py  valuenet.py
value_disagreement/evaluation/: metrics.py
value_disagreement/extraction/: __init__.py  agreement.py  moral_values.py  user_vectors.py
value_disagreement/vizualization/: author_counts.py  profile_radar.py  profile_similarities.py
